code overflow fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -366,6 +366,7 @@ footer{
     color: rgb(181, 66, 0);
     padding: 2px 4px;
     border-radius: 3px;
+    overflow-wrap: break-word;
   }
 }
 
